--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
+    "json-server": "^0.13.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
