--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/vue-fontawesome": "0.0.23",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
@@ -24,9 +25,13 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
+    "jquery": "^3.3.1",
     "json-server": "^0.13.0",
+    "moment": "^2.22.2",
+    "pc-bootstrap4-datetimepicker": "^4.17.50",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
+    "vue-bootstrap-datetimepicker": "^5.0.0-beta.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
