finsh ToDoList edit and update

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
     "vue-bootstrap-datetimepicker": "^5.0.0-beta.2",
+    "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
