--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vue-axios": "^2.1.1",
     "vue-bootstrap-datetimepicker": "^5.0.0-beta.2",
     "vue-lodash": "^2.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
